--- a/templates/CreateConferences.html
+++ b/templates/CreateConferences.html
@@ -74,7 +74,7 @@
                 <input type="number" class="form-control" id="PriceNumber" name="price">
               </div>
               <div class="mb-3">
-                <label class="form-labe1 mb-2" >Place</label>
+                <label class="form-labe1 mb-2" >Institution</label>
                 <select class="form-select" aria-label="Default select example">
                   <option disabled selected>Name of institution</option>
                   <option name="ins-name">University of Baghdad-IT</option>
