--- a/templates/AdminTags.html
+++ b/templates/AdminTags.html
@@ -59,6 +59,12 @@
         <h2>Admin User</h2>
         <hr>
         <br>
+        <div class="AdminSearchBox">
+          <form class="form-inline active-cyan-3 active-cyan-4">
+            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
+              aria-label="Search">
+          </form>
+        </div>
         <div class="row row-cols-1 row-cols-md-5 g-1">
             <a href="./CreateTag.html">
                 <button type="button" class="btn btn-primary btn-rounded"><i class="fas fa-tag"></i> Add Tag</button>
