--- a/templates/EditAdmins.html
+++ b/templates/EditAdmins.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.0.0/mdb.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../static/style.css">
-    <title>Create Admin</title>
+    <title>Edit Admin</title>
 </head>
 <body>
     <!-- ########################################## Navbar ########################################## -->
