--- a/templates/AdminInst.html
+++ b/templates/AdminInst.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.0.0/mdb.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../static/style.css">
-    <title>Admin user</title>
+    <title>Admin Institution</title>
 </head>
 <body>
     <!-- ########################################## Navbar ########################################## -->
@@ -56,12 +56,12 @@
   </div>
     <!-- ##########################################   Main   ########################################## -->
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <h2>Admin User</h2>
+        <h2>Admin Institution</h2>
         <hr>
         <br>
         <div class="AdminSearchBox">
           <form class="form-inline active-cyan-3 active-cyan-4">
-            <input class="form-control form-control-sm ml-3 w-75" type="text" name="tags search" placeholder="Search"
+            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
               aria-label="Search">
           </form>
         </div>
