Add Files and update files

--- a/templates/AdminInst.html
+++ b/templates/AdminInst.html
@@ -61,13 +61,13 @@
         <br>
         <div class="AdminSearchBox">
           <form class="form-inline active-cyan-3 active-cyan-4">
-            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
+            <input class="form-control form-control-sm ml-3 w-75" name="ins search"  type="text" placeholder="Search"
               aria-label="Search">
           </form>
         </div>
         <div class="row row-cols-1 row-cols-md-5 g-1">
-            <a href="./CreateTag.html">
-                <button type="button" class="btn btn-primary btn-rounded"><i class="fas fa-tag"></i> Add Tag</button>
+            <a href="./CreateInst.html">
+                <button type="button" class="btn btn-primary btn-rounded"><i class="fas fa-university fa-lg"></i> Add Institution</button>
             </a>
         </div>
     <!-- ##########################################   informations table   ########################################## -->
@@ -77,27 +77,27 @@
                 <thead class="table-dark">
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Tags Name</th>
+                    <th scope="col">Institution Name</th>
+                    <th scope="col">Institution Email</th>
+                    <th scope="col">Institution Phone</th>
+                    <th scope="col">Institution Active</th>
+                    <th scope="col">Institution Location</th>
                     <th scope="col">Properties</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Ghaithahmed</td>
+                    <td>University of Baghdad-IT</td>
+                    <td>Ghaith@gmail.com</td>
+                    <td>07720000000</td>
+                    <td>yes</td>
+                    <td>Baghdad</td>
                     <td>
                         <a href="#" class="btn btn-sm DelPost"><i class="fas fa-trash"></i></a>
                         <a href="#" class="btn btn-sm EditPost"><i class="fas fa-edit"></i></a>
                     </td>
                     </tr>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Hadeeljassim</td>
-                        <td>
-                            <a href="#" class="btn btn-sm DelPost"><i class="fas fa-trash"></i></a>
-                            <a href="#" class="btn btn-sm EditPost"><i class="fas fa-edit"></i></a>
-                        </td>
-                        </tr>
                 </tbody>
               </table>
         </div>
