--- a/static/style.css
+++ b/static/style.css
@@ -117,6 +117,15 @@ textarea {
   .active-cyan .fa, .active-cyan-2 .fa {
     color: #4dd0e1;
   }
+  .addinsform{
+    border-radius: 2%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 50px;
+    background-color:  rgb(240, 240, 240);
+    width: 50%;
+    padding: 20px;
+  }
 /* ######################## Main Conferences ########################*/
 /* .PostCard{
     box-shadow: 0 0 4px 0;
