--- a/templates/AdminConferences.html
+++ b/templates/AdminConferences.html
@@ -70,6 +70,12 @@
             </a>
         </div>
         <br>
+        <div class="AdminSearchBox">
+            <form class="form-inline active-cyan-3 active-cyan-4">
+              <input class="form-control form-control-sm ml-3 w-75" type="text" name="tags search" placeholder="Search"
+                aria-label="Search">
+            </form>
+          </div>
 <!-- ##########################################   POSTS   ########################################## -->
 
         <div class="container">
